--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject",
     "prepare": "husky install"
   },
   "eslintConfig": {
@@ -52,6 +52,10 @@
     "eslint-config-prettier": "^8.5.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.5",
-    "prettier": "2.5.1"
+    "node-sass": "^7.0.1",
+    "prettier": "2.5.1",
+    "react-app-rewire-scss-loaders": "^0.1.3",
+    "react-app-rewired": "^2.2.1",
+    "sass-resources-loader": "^2.2.4"
   }
 }
