--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-query": "^3.34.16",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-use": "^17.3.2",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
