--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/react-dom": "^17.0.13",
     "axios": "^0.26.0",
     "lodash": "^4.17.21",
+    "querystring": "^0.2.1",
+    "rc-pagination": "^3.1.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.34.16",
