--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "querystring": "^0.2.1",
     "rc-pagination": "^3.1.15",
     "react": "^17.0.2",
+    "react-content-loader": "^6.2.0",
     "react-dom": "^17.0.2",
     "react-query": "^3.34.16",
     "react-router-dom": "^6.2.2",
