--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
     "axios": "^0.26.0",
+    "dayjs": "^1.11.2",
     "lodash": "^4.17.21",
     "querystring": "^0.2.1",
     "rc-pagination": "^3.1.15",
