--- a/package.json
+++ b/package.json
@@ -3,22 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.2.1",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
-    "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
     "axios": "^0.26.0",
     "dayjs": "^1.11.2",
+    "framer-motion": "^6.3.15",
     "lodash": "^4.17.21",
     "querystring": "^0.2.1",
     "rc-pagination": "^3.1.15",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-content-loader": "^6.2.0",
-    "react-dom": "^17.0.2",
-    "react-query": "^3.34.16",
+    "react-dom": "^18.2.0",
+    "react-query": "^3.39.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-use": "^17.3.2",
@@ -56,6 +59,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.179",
+    "@types/react": "^18.0.14",
     "eslint-config-prettier": "^8.5.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.5",
