--- a/package.json
+++ b/package.json
@@ -3,15 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/react": "^2.2.1",
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^16.11.26",
-    "@types/react-dom": "^17.0.13",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.11.42",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
     "axios": "^0.26.0",
     "dayjs": "^1.11.2",
     "framer-motion": "^6.3.15",
@@ -23,9 +21,10 @@
     "react-dom": "^18.2.0",
     "react-query": "^3.39.1",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
-    "react-use": "^17.3.2",
-    "typescript": "^4.6.2",
+    "react-scripts": "5.0.1",
+    "react-use": "^17.4.0",
+    "screenfull": "^6.0.2",
+    "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
